6722586: Updates APIs and cleans up javadoc. Summary: Updates JSR 277 APIs to reflect latest changes. Reviewed-by: mchung
--HG--
rename : src/share/classes/java/module/JamModuleDefinition.java => src/share/classes/sun/module/core/JamModuleDefinition.java
rename : src/share/classes/java/module/JamPackageDefinition.java => src/share/classes/sun/module/core/JamPackageDefinition.java